--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/MainMenu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Dots/gray.svg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Scenes/Dots/", "res://Assets/", "res://Assets/Dots/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,12 +30,12 @@ current_scene="res://Scenes/Game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/disk.gd", "res://Scripts/Grid.gd"]
-selected_script="res://Scenes/disk.gd"
+open_scripts=["res://Scripts/disk.gd", "res://Scripts/Grid.gd"]
+selected_script="res://Scripts/disk.gd"
 open_help=[]
 script_split_offset=155
 list_split_offset=0
