--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -12,16 +12,16 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scenes/disk.gd]
+[res://Scripts/disk.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 365,
-"scroll_position": 327.0,
+"row": 313,
+"scroll_position": 289.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
