--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,24 +17,24 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Dots/gray.svg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Scenes/Dots/", "res://Assets/", "res://Assets/Dots/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/PuzzleGame.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Scenes/Dots/", "res://Resources/", "res://Assets/", "res://Assets/Dots/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/PuzzleGame.tscn")
-current_scene="res://Scenes/Game.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=1
+open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/PuzzleGame.tscn", "res://Scenes/Dots/yellow_dot.tscn", "res://Scenes/Dots/gray_dot.tscn")
+current_scene="res://Scenes/PuzzleGame.tscn"
+center_split_offset=-504
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/disk.gd", "res://Scripts/Grid.gd"]
+open_scripts=["res://Scripts/disk.gd", "res://Scripts/Dot.gd", "res://Scripts/Grid.gd", "res://Scripts/MainMenu.gd", "res://Scripts/PuzzleGame.gd", "res://Resources/puzzle_levels.json"]
 selected_script="res://Scripts/disk.gd"
 open_help=[]
 script_split_offset=155
