--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/PuzzleUI.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Resources/", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,19 +26,19 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/PuzzleGame.tscn", "res://Scenes/Dots/yellow_dot.tscn", "res://Scenes/Dots/gray_dot.tscn", "res://Scenes/PuzzleUI.tscn", "res://Scenes/EndlessUI.tscn")
-current_scene="res://Scenes/Game.tscn"
-center_split_offset=-504
-selected_default_debugger_tab_idx=1
+current_scene="res://Scenes/EndlessUI.tscn"
+center_split_offset=-318
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/disk.gd", "res://Scripts/Dot.gd", "res://Scripts/EndlessUI.gd", "res://Scripts/Grid.gd", "res://Scripts/MainMenu.gd", "res://Scripts/PuzzleGame.gd", "res://Scripts/PuzzleUI.gd", "res://Resources/puzzle_levels.json"]
-selected_script="res://Scripts/EndlessUI.gd"
-open_help=[]
+selected_script="res://Scripts/disk.gd"
+open_help=["Control"]
 script_split_offset=317
-list_split_offset=0
+list_split_offset=-99
 zoom_factor=1.0
 
 [ShaderEditor]
