--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -26,11 +26,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/PuzzleGame.tscn", "res://Scenes/Dots/yellow_dot.tscn", "res://Scenes/Dots/gray_dot.tscn", "res://Scenes/PuzzleUI.tscn", "res://Scenes/EndlessUI.tscn")
-current_scene="res://Scenes/EndlessUI.tscn"
+current_scene="res://Scenes/PuzzleUI.tscn"
 center_split_offset=-318
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
