--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/PuzzleGame.tscn", "res://Scenes/Dots/yellow_dot.tscn", "res://Scenes/Dots/gray_dot.tscn", "res://Scenes/PuzzleUI.tscn", "res://Scenes/EndlessUI.tscn")
-current_scene="res://Scenes/PuzzleUI.tscn"
+current_scene="res://Scenes/MainMenu.tscn"
 center_split_offset=-318
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/disk.gd", "res://Scripts/Dot.gd", "res://Scripts/EndlessUI.gd", "res://Scripts/Grid.gd", "res://Scripts/MainMenu.gd", "res://Scripts/PuzzleGame.gd", "res://Scripts/PuzzleUI.gd", "res://Resources/puzzle_levels.json"]
-selected_script="res://Scripts/disk.gd"
+selected_script="res://Scripts/MainMenu.gd"
 open_help=["Control"]
 script_split_offset=317
 list_split_offset=-99
