--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1151,
-"scroll_position": 1128.0,
-"selection": false,
+"row": 1399,
+"scroll_position": 1382.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 1399,
+"selection_to_column": 4,
+"selection_to_line": 1399,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 76,
-"scroll_position": 54.0,
+"row": 55,
+"scroll_position": 66.0,
 "selection": false,
 "syntax_highlighter": "JSON"
 }
@@ -87,12 +91,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 120.0,
-"selection": false,
+"row": 151,
+"scroll_position": 135.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 151,
+"selection_to_column": 34,
+"selection_to_line": 156,
 "syntax_highlighter": "GDScript"
 }
 
@@ -101,11 +109,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 80,
-"scroll_position": 25.0,
+"row": 138,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
